fixing all urls
fixing all urls for part of templates with app_name and {% url '' %}

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,12 +56,12 @@
 				<div class="container main-menu">
 					<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="{% url 'index' %}"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
+				        <a href="{% url 'website:index' %}"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li><a href="{% url 'index' %}">Home</a></li>
-				          <li><a href="{% url 'about' %}">About</a></li>
+				          <li><a href="{% url 'website:index' %}">Home</a></li>
+				          <li><a href="{% url 'website:about' %}">About</a></li>
 				          
 				          <li class="menu-has-children"><a href="">Blog</a>
 				            <ul>
@@ -80,7 +80,7 @@
 						          </li>					                		
 				            </ul>
 				          </li>					          					          		          
-				          <li><a href="{% url 'contact' %}">Contact</a></li>
+				          <li><a href="{% url 'website:contact' %}">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->					      		  
 					</div>
