--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -57,12 +57,12 @@
 				<div class="container main-menu">
 					<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="{% url 'index' %}"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
+				        <a href="{% url 'website:index' %}"><img src="{% static 'img/logo.png' %}" alt="" title="" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li><a href="{% url 'index' %}">Home</a></li>
-				          <li><a href="{% url 'about' %}">About</a></li>
+				          <li><a href="{% url 'website:index' %}">Home</a></li>
+				          <li><a href="{% url 'website:about' %}">About</a></li>
 				          <li><a href="packages.html">Packages</a></li>
 				          <li><a href="hotels.html">Hotels</a></li>
 				          <li><a href="insurance.html">Insurence</a></li>
@@ -83,7 +83,7 @@
 						          </li>					                		
 				            </ul>
 				          </li>					          					          		          
-				          <li><a href="{% url 'contact' %}">Contact</a></li>
+				          <li><a href="{% url 'website:contact' %}">Contact</a></li>
 				        </ul>
 				      </nav><!-- #nav-menu-container -->					      		  
 					</div>
