--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -76,7 +76,7 @@
               <li class="menu-has-children">
                 <a href="">Blog</a>
                 <ul>
-                  <li><a href="{% url 'blog:index' %}">Blog Home</a></li>
+                  <li><a href="{% url 'blog:index' %}">Blog</a></li>
                   <li><a href="# ">Blog Single</a></li>
                 </ul>
               </li>
@@ -154,7 +154,7 @@
                     <span class="lnr lnr-calendar-full"></span>
                   </p>
                   <p class="view col-lg-12 col-md-12 col-6">
-                    <a href="#">1.2M Views</a> <span class="lnr lnr-eye"></span>
+                    <a href="#">{{post.counted_views}}</a> <span class="lnr lnr-eye"></span>
                   </p>
                   <p class="comments col-lg-12 col-md-12 col-6">
                     <a href="#">06 Comments</a>
