--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -70,25 +70,19 @@
             <ul class="nav-menu">
               <li><a href="{% url 'website:index' %}">Home</a></li>
               <li><a href="{% url 'website:about' %}">About</a></li>
-              <li><a href="packages.html">Packages</a></li>
-              <li><a href="hotels.html">Hotels</a></li>
-              <li><a href="insurance.html">Insurence</a></li>
               <li class="menu-has-children">
-                <a href="">Blog</a>
-                <ul>
-                  <li><a href="{% url 'blog:index' %}">Blog</a></li>
-                  <li><a href="# ">Blog Single</a></li>
-                </ul>
+                <a href="{% url 'blog:index' %}">Blog</a>
+                
               </li>
               <li class="menu-has-children">
-                <a href="">Pages</a>
+                
                 <ul>
-                  <li><a href="elements.html">Elements</a></li>
+                  <li></li>
                   <li class="menu-has-children">
-                    <a href="">Level 2 </a>
+                    
                     <ul>
-                      <li><a href="#">Item One</a></li>
-                      <li><a href="#">Item Two</a></li>
+                      <li></li>
+                      <li></li>
                     </ul>
                   </li>
                 </ul>
@@ -132,25 +126,22 @@
                 <div class="feature-img">
                   <img
                     class="img-fluid"
-                    src="{% static 'img/blog/feature-img1.jpg' %}"
+                    src="{{post.image.url}}"
                     alt=""
                   />
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 meta-details">
                 <ul class="tags">
-                  <li><a href="#">Food,</a></li>
-                  <li><a href="#">Technology,</a></li>
-                  <li><a href="#">Politics,</a></li>
-                  <li><a href="#">Lifestyle</a></li>
+                 <a href="#">{{post.category.all | join:", "}}</a> 
                 </ul>
                 <div class="user-details row">
                   <p class="user-name col-lg-12 col-md-12 col-6">
-                    <a href="#">Mark wiens</a>
+                    <a href="#">{{post.author.get_full_name}}</a>
                     <span class="lnr lnr-user"></span>
                   </p>
                   <p class="date col-lg-12 col-md-12 col-6">
-                    <a href="#">12 Dec, 2017</a>
+                    <a href="#">{{post.published_date}}</a>
                     <span class="lnr lnr-calendar-full"></span>
                   </p>
                   <p class="view col-lg-12 col-md-12 col-6">
