--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -232,7 +232,7 @@
                 <a class="posts-title" href="{% url 'blog:single' pid=post.id %}"><h3>{{post.title}}</h3></a>
               
                 <p class="excert">{{post.content}}</p>
-                <a href="blog-single.html" class="primary-btn">View More</a>
+                <a href="{% url 'blog:single' pid=post.id %}" class="primary-btn">View More</a>
               </div>
             </div>
             {% endfor %}
