--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -188,8 +188,9 @@
                 <div
                   class="col-lg-6 col-md-6 col-12 nav-left flex-row d-flex justify-content-start align-items-center"
                 >
+                {% if previous_post %}
                   <div class="thumb">
-                    <a href="#"
+                    <a href="{% url 'blog:single' pid=previous_post.id %}"
                       ><img
                         class="img-fluid"
                         src="{% static 'img/blog/prev.jpg' %}"
@@ -203,7 +204,9 @@
                   </div>
                   <div class="detials">
                     <p>Prev Post</p>
-                    <a href="#"><h4>Space The Final Frontier</h4></a>
+                    
+                    <a href="{% url 'blog:single' pid=previous_post.id %}"><h4>{{ previous_post.title }}</h4></a>
+                    {% endif %}
                   </div>
                 </div>
                 <div
@@ -211,20 +214,24 @@
                 >
                   <div class="detials">
                     <p>Next Post</p>
-                    <a href="#"><h4>Telescopes 101</h4></a>
+                    {% if next_post %}
+                    <a href="{% url 'blog:single' pid=next_post.id %}"><h4>{{ next_post.title }}</h4></a>
+                    
                   </div>
+                  
                   <div class="arrow">
                     <a href="#"
                       ><span class="lnr text-white lnr-arrow-right"></span
                     ></a>
                   </div>
                   <div class="thumb">
-                    <a href="#"
+                    <a href="{% url 'blog:single' pid=next_post.id %}"
                       ><img
                         class="img-fluid"
                         src="{% static 'img/blog/next.jpg' %}"
                         alt=""
                     /></a>
+                    {% endif %}
                   </div>
                 </div>
               </div>
