--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -200,7 +200,10 @@
             <div class="single-post row">
               <div class="col-lg-3 col-md-3 meta-details">
                 <ul class="tags">
-                  {{post.category.all | join:", "}}
+                  
+                  {% for cat in post.category.all %}
+                    <a href="#">{{cat.name}}</a> {% if not forloop.last %},{% endif %}
+                  {% endfor %}
                   </ul>
                 <div class="user-details row">
                   <p class="user-name col-lg-12 col-md-12 col-6">
@@ -208,7 +211,7 @@
                     <span class="lnr lnr-user"></span>
                   </p>
                   <p class="date col-lg-12 col-md-12 col-6">
-                    <a href="#">{{post.published_date}}</a>
+                    <a href="#">{{post.published_date|date:"d M Y"}}</a>
                     <span class="lnr lnr-calendar-full"></span>
                   </p>
                   <p class="view col-lg-12 col-md-12 col-6">
@@ -231,7 +234,7 @@
                 </div>
                 <a class="posts-title" href="{% url 'blog:single' pid=post.id %}"><h3>{{post.title}}</h3></a>
               
-                <p class="excert">{{post.content}}</p>
+                <p class="excert">{{post.content|truncatewords:"10"}}</p>
                 <a href="{% url 'blog:single' pid=post.id %}" class="primary-btn">View More</a>
               </div>
             </div>
