--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -133,7 +133,10 @@
               </div>
               <div class="col-lg-3 col-md-3 meta-details">
                 <ul class="tags">
-                 <a href="#">{{post.category.all | join:", "}}</a> 
+                 
+                 {% for cat in post.category.all %}
+                        <a href="#">{{cat.name}}</a>
+                  {% endfor %}              
                 </ul>
                 <div class="user-details row">
                   <p class="user-name col-lg-12 col-md-12 col-6">
@@ -141,7 +144,7 @@
                     <span class="lnr lnr-user"></span>
                   </p>
                   <p class="date col-lg-12 col-md-12 col-6">
-                    <a href="#">{{post.published_date}}</a>
+                    <a href="#">{{post.published_date|date:"d M Y"}}</a>
                     <span class="lnr lnr-calendar-full"></span>
                   </p>
                   <p class="view col-lg-12 col-md-12 col-6">
