--- a/templates/test.html
+++ b/templates/test.html
@@ -1,11 +1,17 @@
+{% load blog_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>test</title>
 </head>
 <body>
-    <p>{{post.title}}</p>
+    <h1>Testing page</h1>
+    <p>test: {% post_count %} </p>
+        {% totallposts as posts %}
+        {% for post in posts %}
+            <li>{{ post }}</li>
+        {% endfor %}    
 </body>
 </html>
