--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load blog_tags %}
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
   <head>
@@ -177,12 +178,7 @@
                 <p class="excert">
                   {{post.content}}
                 </p>
-                <p>
-                  {{post.content}}
-                </p>
-                <p>
-                  {{post.content}}
-                </p>
+            
               </div>
 
             </div>
@@ -215,9 +211,10 @@
                 <div
                   class="col-lg-6 col-md-6 col-12 nav-right flex-row d-flex justify-content-end align-items-center"
                 >
+                {% if next_post %}
                   <div class="detials">
                     <p>Next Post</p>
-                    {% if next_post %}
+                    
                     <a href="{% url 'blog:single' pid=next_post.id %}"><h4>{{ next_post.title }}</h4></a>
                     
                   </div>
@@ -401,34 +398,7 @@
                   <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
               </div>
-              <div class="single-sidebar-widget user-info-widget">
-                <img
-                  src="{% static  'img/blog/user-info.png' %}" 
-                  alt=""
-                />
-                <a href="#"><h4>Charlie Barber</h4></a>
-                <p>Senior blog writer</p>
-                <ul class="social-links">
-                  <li>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-github"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa fa-behance"></i></a>
-                  </li>
-                </ul>
-                <p>
-                  Boot camps have its supporters andit sdetractors. Some people
-                  do not understand why you should have to spend money on boot
-                  camp when you can get. Boot camps have itssuppor ters andits
-                  detractors.
-                </p>
-              </div>
+             {% include 'blog/blog-writer.html' %}
               <div class="single-sidebar-widget popular-post-widget">
                 <h4 class="popular-title">Popular Posts</h4>
                 <div class="popular-post-list">
