--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -202,12 +202,13 @@
                 <ul class="tags">
                   
                   {% for cat in post.category.all %}
-                    <a href="#">{{cat.name}}</a> {% if not forloop.last %},{% endif %}
-                  {% endfor %}
+                    <a href="{% url 'blog:category' cat_name=cat.name %}">{{cat.name}}</a> {% if not forloop.last %},{% endif %}
+                  {% endfor %} 
+
                   </ul>
                 <div class="user-details row">
                   <p class="user-name col-lg-12 col-md-12 col-6">
-                    <a href="#">{{post.author.get_full_name}}</a>
+                    <a href="{% url 'blog:author' author_username=post.author.username %}">{{post.author.get_full_name}}</a>
                     <span class="lnr lnr-user"></span>
                   </p>
                   <p class="date col-lg-12 col-md-12 col-6">
@@ -240,29 +241,36 @@
             </div>
             {% endfor %}
             <nav class="blog-pagination justify-content-center d-flex">
+
               <ul class="pagination">
+              {% if posts.has_previous %}
                 <li class="page-item">
-                  <a href="#" class="page-link" aria-label="Previous">
+                  <a href="?page={{ posts.previous_page_number }}" class="page-link" aria-label="Previous">
                     <span aria-hidden="true">
                       <span class="lnr lnr-chevron-left"></span>
                     </span>
                   </a>
                 </li>
-                <li class="page-item"><a href="#" class="page-link">01</a></li>
-                <li class="page-item active">
-                  <a href="#" class="page-link">02</a>
-                </li>
-                <li class="page-item"><a href="#" class="page-link">03</a></li>
-                <li class="page-item"><a href="#" class="page-link">04</a></li>
-                <li class="page-item"><a href="#" class="page-link">09</a></li>
+                {% endif %}
+                {% for i in posts.paginator.page_range %}
+                {% if posts.number == i %}
+                      <li class="page-item active"><a href="?page={{i}}" class="page-link">{{i}}</a></li>
+                      {% else %}
+                      <li class="page-item"><a href="?page={{i}}" class="page-link">{{i}}</a></li>
+                {% endif %}
+                {% endfor %}
+      
+                {% if posts.has_next %}
                 <li class="page-item">
-                  <a href="#" class="page-link" aria-label="Next">
+                
+                  <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Next">
                     <span aria-hidden="true">
                       <span class="lnr lnr-chevron-right"></span>
                     </span>
                   </a>
                 </li>
-              </ul>
+                {% endif %}
+              </ul> 
             </nav>
           </div>
           <div class="col-lg-4 sidebar-widgets">
