--- a/templates/base.html
+++ b/templates/base.html
@@ -126,11 +126,12 @@
 								<p>
 									For business professionals caught between high OEM price and mediocre print and graphic output.									
 								</p>								
-								<div id="mc_embed_signup">
-									<form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
+								<div>
+									<form  action="{% url 'website:newsletter' %}" method="post" class="subscription relative">
+									 {% csrf_token %} 
 										<div class="input-group d-flex flex-row">
-											<input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-											<button class="btn bb-btn"><span class="lnr lnr-location"></span></button>		
+											<input name="email" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
+											<button class="btn bb-btn" type='submit'><span class="lnr lnr-location"></span></button>		
 										</div>									
 										<div class="mt-10 info"></div>
 									</form>
@@ -163,12 +164,20 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<a href="#"><i class="fa fa-twitter"></i></a>
 							<a href="#"><i class="fa fa-dribbble"></i></a>
 							<a href="#"><i class="fa fa-behance"></i></a>
+							<div id="message-container" style="display: none;">
+    						    	<div id="popup-notification">
+        						<div class="notification-content">
+            					<span id="notification-message"></span>
+            					<button id="close-notification">Close</button>
+        							</div>
+    							</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</footer>
 			<!-- End footer Area -->	
-
+			 
 			<script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
 			<script src="{% static 'js/popper.min.js' %}"></script>
 			<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>			
@@ -182,6 +191,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="{% static 'js/jquery.nice-select.min.js' %}"></script>					
 			<script src="{% static 'js/owl.carousel.min.js' %}"></script>							
 			<script src="{% static 'js/mail-script.js' %}"></script>	
-			<script src="{% static 'js/main.js' %}"></script>	
+			<script src="{% static 'js/main.js' %}"></script>
+			<script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+			<script src="{% static 'js/bootstrap.min.js' %}"></script>
+			<script src="{% static 'js/custom.js' %}"></script>
 		</body>
 	</html>
