--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -176,7 +176,7 @@
                   {{post.title}}
                 </h3>
                 <p class="excert">
-                  {{post.content}}
+                  {{post.content| safe}}
                 </p>
             
               </div>
