--- a/templates/website/contact.html
+++ b/templates/website/contact.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
+
 	  
 			<!-- start banner Area -->
 			<section class="relative about-banner">	
@@ -58,7 +60,7 @@
 							<form class="form-area contact-form text-right"  action="{% url 'website:contact' %}" method="post">
 								<div class="row">
 					{% csrf_token %} 
-					 	
+					
 					<div class="col-lg-6 form-group">
 								 {{ name_form.name.label_tag }}
         						 {{ name_form.name }}
@@ -73,9 +75,10 @@
 										<textarea class="common-textarea form-control" name="message" placeholder="Enter Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'" required=""></textarea>				
 									</div>
 									<div class="col-lg-12">
-
-										<div class="alert-msg" style="text-align: left;"></div>
-										<button class="genric-btn primary" style="float: right;">Send Message</button>											
+									<div class="alert-msg" style="text-align: left;"></div>
+									{{ contact_form.captcha }}
+									<button class="genric-btn primary" style="float: right;">Send Message</button>	
+																				
 									</div>
 								</div>
 							</form>	
